--- a/viewmap.html
+++ b/viewmap.html
@@ -3,10 +3,6 @@
 <head>
   <meta charset="UTF-8">
   <title>住んだ場所</title>
-<!---
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.0/dist/leaflet.css" />
-  <script src="https://unpkg.com/leaflet@1.3.0/dist/leaflet.js"></script>
---->
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
 
@@ -34,7 +30,7 @@
   </script>
 </head>
 <body onload="init()">
-  <div id="mapcontainer" style="width:600px;height:600px"></div>
+  <div id="mapcontainer" style="height:100vh"></div>
 </body>
 <script>
 
@@ -61,8 +57,6 @@ var LIST = [
 function get_next_view()
 {
     var z = [5,6,7,8,9,10,11,12,13,14,15,16,17,18,17,16,15,14,13,12,11,10,9,8,7,6,5];
-    // ズームレベルが小数点でも動作するかテスト　-> 使えないようだ
-    //var z = [5.1,5.2,5.3,5.4,5.5,5.6,6,7,8,9,10,11,12,13,14,15,16,17,18,17,16,15,14,13,12,11,10,9,8,7,6,5];
 
     var list = LIST;
 
